apps/k8s-playground-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-playground-service
  labels:
    app.kubernetes.io/name: k8s-playground-service
    app.kubernetes.io/part-of: k8s-playground
    istio.io/rev: stable
