apps/k8s-playground-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-playground-service
  namespace: k8s-playground-service
  labels:
    app.kubernetes.io/name: k8s-playground-service
    app.kubernetes.io/part-of: k8s-playground
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-playground-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-playground-service
        app.kubernetes.io/part-of: k8s-playground
    spec:
      serviceAccountName: k8s-playground-service
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: service
          image: mblayman/k8s-playground-service:0.2.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
