apps/k8s-playground-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-playground-service
  namespace: k8s-playground-service
  labels:
    app.kubernetes.io/name: k8s-playground-service
    app.kubernetes.io/part-of: k8s-playground
spec:
  selector:
    app.kubernetes.io/name: k8s-playground-service
  ports:
    - name: http
      port: 80
      targetPort: http
