apps/k8s-playground-service/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-playground-service-http-redirect
  namespace: k8s-playground-service
  labels:
    app.kubernetes.io/name: k8s-playground-service
    app.kubernetes.io/part-of: k8s-playground
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  hostnames:
    - app.k8s-playground.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: k8s-playground-gateway
      namespace: istio-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
